integrate QMLMap in GPStracker

--- a/build-GPStracker-Desktop_Qt_5_7_0_MinGW_32bit-Debug/Makefile
+++ b/build-GPStracker-Desktop_Qt_5_7_0_MinGW_32bit-Debug/Makefile
@@ -210,10 +210,15 @@ Makefile: ../GPStracker/GPStracker.pro C:/Qt/Qt5.7.0/5.7/mingw53_32/mkspecs/win3
 		C:/Qt/Qt5.7.0/5.7/mingw53_32/mkspecs/features/lex.prf \
 		../GPStracker/GPStracker.pro \
 		C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/qtmaind.prl \
+		C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5QuickWidgets.prl \
+		C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Quick.prl \
 		C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Widgets.prl \
 		C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Gui.prl \
 		C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5SerialPort.prl \
 		C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Positioning.prl \
+		C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Sql.prl \
+		C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Qml.prl \
+		C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Network.prl \
 		C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Core.prl
 	$(QMAKE) -spec win32-g++ "CONFIG+=debug" "CONFIG+=qml_debug" -o Makefile ..\GPStracker\GPStracker.pro
 C:/Qt/Qt5.7.0/5.7/mingw53_32/mkspecs/features/spec_pre.prf:
@@ -367,10 +372,15 @@ C:/Qt/Qt5.7.0/5.7/mingw53_32/mkspecs/features/yacc.prf:
 C:/Qt/Qt5.7.0/5.7/mingw53_32/mkspecs/features/lex.prf:
 ../GPStracker/GPStracker.pro:
 C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/qtmaind.prl:
+C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5QuickWidgets.prl:
+C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Quick.prl:
 C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Widgets.prl:
 C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Gui.prl:
 C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5SerialPort.prl:
 C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Positioning.prl:
+C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Sql.prl:
+C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Qml.prl:
+C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Network.prl:
 C:/Qt/Qt5.7.0/5.7/mingw53_32/lib/Qt5Core.prl:
 qmake: FORCE
 	@$(QMAKE) -spec win32-g++ "CONFIG+=debug" "CONFIG+=qml_debug" -o Makefile ..\GPStracker\GPStracker.pro
