added database connection and simple select query

--- a/build-RefInfoEditor-Desktop_Qt_5_7_0_MinGW_32bit-Debug/Makefile
+++ b/build-RefInfoEditor-Desktop_Qt_5_7_0_MinGW_32bit-Debug/Makefile
@@ -208,6 +208,7 @@ Makefile: ../RefInfoEditor/RefInfoEditor.pro C:/Qt/5.7/mingw53_32/mkspecs/win32-
 		C:/Qt/5.7/mingw53_32/lib/qtmaind.prl \
 		C:/Qt/5.7/mingw53_32/lib/Qt5Widgets.prl \
 		C:/Qt/5.7/mingw53_32/lib/Qt5Gui.prl \
+		C:/Qt/5.7/mingw53_32/lib/Qt5Sql.prl \
 		C:/Qt/5.7/mingw53_32/lib/Qt5Core.prl
 	$(QMAKE) -spec win32-g++ "CONFIG+=debug" "CONFIG+=qml_debug" -o Makefile ..\RefInfoEditor\RefInfoEditor.pro
 C:/Qt/5.7/mingw53_32/mkspecs/features/spec_pre.prf:
@@ -359,6 +360,7 @@ C:/Qt/5.7/mingw53_32/mkspecs/features/lex.prf:
 C:/Qt/5.7/mingw53_32/lib/qtmaind.prl:
 C:/Qt/5.7/mingw53_32/lib/Qt5Widgets.prl:
 C:/Qt/5.7/mingw53_32/lib/Qt5Gui.prl:
+C:/Qt/5.7/mingw53_32/lib/Qt5Sql.prl:
 C:/Qt/5.7/mingw53_32/lib/Qt5Core.prl:
 qmake: FORCE
 	@$(QMAKE) -spec win32-g++ "CONFIG+=debug" "CONFIG+=qml_debug" -o Makefile ..\RefInfoEditor\RefInfoEditor.pro
